tests/compile_fail/compose_l_with_r.stderr
error[E0599]: no method named `ceiling` found for struct `Conn<i32, i32, R>` in the current scope
  --> tests/compile_fail/compose_l_with_r.rs:14:30
   |
14 |     let _: ConnL<i32, i32> = compose_l!(L_CONN, R_CONN);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `Conn<i32, i32, R>`
   |
   = note: the method was found for
           - `Conn<A, B>`
   = note: this error originates in the macro `$crate::compose_l` which comes from the expansion of the macro `compose_l` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `upper` found for struct `Conn<i32, i32, R>` in the current scope
  --> tests/compile_fail/compose_l_with_r.rs:14:30
   |
14 |     let _: ConnL<i32, i32> = compose_l!(L_CONN, R_CONN);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `Conn<i32, i32, R>`
   |
   = note: the method was found for
           - `Conn<A, B>`
   = note: this error originates in the macro `$crate::compose_l` which comes from the expansion of the macro `compose_l` (in Nightly builds, run with -Z macro-backtrace for more info)
